fix: bug fixes, improvements