@@ -6,15 +6,25 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.transaction.annotation.Transactional;
+import ru.yandex.practicum.filmorate.model.Director;
 import ru.yandex.practicum.filmorate.model.Film;
+import ru.yandex.practicum.filmorate.model.Rating;
+import ru.yandex.practicum.filmorate.storage.DirectorStorage;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
 
+import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @SpringBootTest
 @ActiveProfiles("test")
+@Transactional
 class FilmDbStorageIntegrationTest {
 
     @Autowired
@@ -23,41 +33,53 @@ class FilmDbStorageIntegrationTest {
     @Autowired
     private FilmStorage filmStorage;
 
+    @Autowired
+    private DirectorStorage directorStorage;
+
+    private Film filmNight;
+    private Film filmNoRelation;
+
     @BeforeEach
     void initData() {
-        // Очистка всех зависимых таблиц
-        jdbcTemplate.execute("DELETE FROM review_likes");
-        jdbcTemplate.execute("DELETE FROM reviews");
-        jdbcTemplate.execute("DELETE FROM film_likes");
-        jdbcTemplate.execute("DELETE FROM films_directors");
-        jdbcTemplate.execute("DELETE FROM film_genres");
-        jdbcTemplate.execute("DELETE FROM friendships");
-        jdbcTemplate.execute("DELETE FROM feed_events");
-        jdbcTemplate.execute("DELETE FROM films");
-        jdbcTemplate.execute("DELETE FROM directors");
-        jdbcTemplate.execute("DELETE FROM users");
-        jdbcTemplate.execute("DELETE FROM ratings");
+        Rating ratingG = new Rating();
+        ratingG.setId(1L);
+        Director directorAnig = directorStorage.createDirector(new Director(null, "Аниг Режиссер"));
+
+        filmStorage.persist(new Film(
+                null,
+                "Крадущийся тигр",
+                "desc",
+                LocalDate.of(2000, 1, 1),
+                120,
+                ratingG,
+                Collections.emptyList(),
+                Collections.emptyList()
+        ));
+        filmNight = filmStorage.persist(new Film(
+                null,
+                "Крадущийся в ночи",
+                "desc",
+                LocalDate.of(2001, 1, 1),
+                100,
+                ratingG,
+                Collections.emptyList(),
+                Collections.emptyList()
+        ));
+        filmNoRelation = filmStorage.persist(new Film(
+                null,
+                "Ничего общего",
+                "desc",
+                LocalDate.of(2002, 2, 2),
+                90,
+                ratingG,
+                Collections.emptyList(),
+                Collections.emptyList()
+        ));
 
         jdbcTemplate.update(
-                "INSERT INTO users (user_id, email, login, name, birthday) " +
-                        "VALUES (1, 'user1@example.com', 'user1', 'User One', '1990-01-01')"
-        );
-        jdbcTemplate.update(
-                "INSERT INTO ratings (rating_id, name) VALUES (1, 'G')"
-        );
-
-        jdbcTemplate.update(
-                "INSERT INTO films (film_id, name, description, release_date, duration, rating_id) VALUES " +
-                        "(1, 'Крадущийся тигр', 'desc', '2000-01-01', 120, 1), " +
-                        "(2, 'Крадущийся в ночи', 'desc', '2001-01-01', 100, 1), " +
-                        "(3, 'Ничего общего',      'desc', '2002-02-02',  90, 1)"
-        );
-
-        jdbcTemplate.update(
-                "INSERT INTO directors (id, name) VALUES (1, 'Аниг Режиссер')"
-        );
-        jdbcTemplate.update(
-                "INSERT INTO films_directors (film_id, director_id) VALUES (3, 1)"
+                "INSERT INTO films_directors (film_id, director_id) VALUES (?, ?)",
+                filmNoRelation.getId(),
+                directorAnig.getId()
         );
     }
 
@@ -76,20 +98,21 @@ class FilmDbStorageIntegrationTest {
         List<Film> films = filmStorage.findByDirectorLike("%аниг%");
         assertNotNull(films, "Список не должен быть null");
         assertEquals(1, films.size(), "Ожидаем один фильм по части имени режиссёра 'аниг'");
-        Film only = films.get(0);
-        assertEquals(3L, only.getId(), "Должен быть фильм с id=3");
+        Film only = films.getFirst();
+        assertEquals(filmNoRelation.getId(), only.getId(),
+                "Должен быть фильм с тем же id, что и filmNoRelation");
         assertTrue(only.getDirectors().stream()
                         .anyMatch(d -> d.getName().toLowerCase().contains("аниг")),
                 "Режиссёр у фильма должен содержать 'аниг'");
     }
 
     @Test
-    void findByBothIntegration() {
-        List<Film> films = filmStorage.findByBoth("%ночи%");
+    void findByDirectorAndTitleIntegration() {
+        List<Film> films = filmStorage.findByDirectorAndTitle("%ночи%");
         assertNotNull(films, "Список не должен быть null");
         assertFalse(films.isEmpty(), "Ожидаем хотя бы один фильм по combined-поиску");
         assertTrue(films.stream()
-                        .anyMatch(f -> f.getId().equals(2L)),
-                "Должен присутствовать фильм с id=2");
+                        .anyMatch(f -> f.getId().equals(filmNight.getId())),
+                "Должен присутствовать фильм с тем же id, что и filmNight");
     }
 }
